// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrdersNewPageComponent should not render the template when the VM is not provided 1`] = `
<div
  id="root0"
  ng-version="19.2.9"
>
  <!--container-->
</div>
`;

exports[`OrdersNewPageComponent should render the template when the VM is provided 1`] = `
<div
  id="root1"
  ng-version="19.2.9"
>
  <app-page-section>
    <section
      class="mt-80 md:mt-32 flex flex-col space-y-28"
    >
      <!--container-->
    </section>
  </app-page-section>
  <!--container-->
</div>
`;
